# dynamic_array.c

./: CMakeLists.txt
cmake/: dynamic_arrayConfig.cmake.in
include/: dynamic_array.h
include/dynamic_array/: dynamic_array.h
src/: buffers.c  buffers.h  dynamic_array.c  dynamic_array.h
